# Nootes

./: .env.example  .gitignore  README.md  pyproject.toml
Formula/: nootes.rb
nootes/: __init__.py  categories.py  categorizer.py  cli.py  config.py  daemon.py  full_categorize.py  git_ops.py  organizer.py  readers.py  watcher.py
